# LLM-Guardrails-Gateway

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: admin.py  audit.py  gateway.py  metrics.py  policies.py  providers.py  security.py  threats.py
backend/app/engine/: context_analyzer.py  guardrails.py  policy_engine.py  prompt_validator.py
backend/app/middleware/: auth.py  interceptor.py  rate_limiter.py
backend/app/models/: __init__.py  enums.py  schemas.py  sqlalchemy_models.py
backend/app/observability/: logging.py  metrics.py  tracing.py
backend/app/output/: compliance.py  hallucination_detector.py  validator.py
backend/app/routing/: cost_optimizer.py  providers.py  router.py
backend/app/security/: injection_detector.py  jailbreak_detector.py  pii_scanner.py  semantic_firewall.py  threat_scorer.py  toxicity_analyzer.py
backend/app/services/: audit_service.py  auth_service.py  metrics_service.py
docs/: api.md  architecture.md  deployment.md
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  sidebar.tsx
frontend/lib/: api.ts  utils.ts
infra/: docker-compose.yml
infra/k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml
(+18 files in other folders)
